Fix bottom nav on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -665,6 +665,14 @@ Begin Media Queries
 	.screenshot-grid li {
 		width: 50%;
 	}
+	.bottom-footer .logo {
+		display: inline-block;
+		width: 25%;
+	}
+	.bottom-nav {
+		display: inline-block;
+		width: 75%;
+	}
 	.bottom-nav ul > li {
 		margin: 10px 10% 10px 0;
 	}
